# rainbow-tag-input

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
mock-server/: pyproject.toml
mock-server/mock_server/: main.py
src/: App.tsx  types.ts
src/components/: colored-tag-input.tsx  colored-tag.tsx  rainbow-tags.tsx
src/hooks/: autocomplete-tags.ts
