[tool.poetry]
name = "mock-server"
version = "0.1.0"
description = ""
authors = ["Eugen Ciur <eugen@papermerge.com>"]
readme = "README.md"
packages = [{include = "mock_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
